--- a/waybar/config
+++ b/waybar/config
@@ -1,76 +1,43 @@
-// __        __          _                 
-// \ \      / /_ _ _   _| |__   __ _ _ __  
-//  \ \ /\ / / _` | | | | '_ \ / _` | '__| 
-//   \ V  V / (_| | |_| | |_) | (_| | |    
-//    \_/\_/ \__,_|\__, |_.__/ \__,_|_|    
-//                 |___/                   
-//  
-// by Stephan Raabe (2023) 
-// ----------------------------------------------------- 
-//
 {
-    // General Settings
-
-    // Position TOP
-    "layer": "top",
-    "margin-top": 14,
+  "layer": "top",
+    "position": "top",
     "margin-bottom": 0,
 
-    // Position BOTTOM
-    // "position": "bottom",
-    // "margin-top": 0,
-    // "margin-bottom": 14,
-    
-    "layer": "top",
-    "height": 16,
-    "margin-left": 0,
-    "margin-right": 0,    
-    "spacing": 0,
-
     // Load Modules
-    "include": ["~/dotfiles/waybar/modules.json"],
+    "include": ["~/.config/waybar/modules.json"],
 
-    // Modules Left
+    // Choose the order of the modules
     "modules-left": [
-        "custom/appmenu",
-        "wlr/taskbar",
-        "group/quicklinks",
-        "hyprland/window"
+      "custom/appmenu",
+      "group/quicklinks"
+      //"wlr/taskbar",
+      //"hyprland/window"
     ],
-
-    // Modules Center
-    "modules-center": [
-        "hyprland/workspaces"
-    ],
-
-    // Modules Right    
+    "modules-center": ["hyprland/workspaces"],
     "modules-right": [
-        "custom/updates",
-        "pulseaudio",
-        "bluetooth",
-        "battery",
-        //"group/hardware",
-        //"network",
-        "clock",
-        "custom/exit"
+      "custom/updates",
+      "pulseaudio",
+      "network",
+      "sway/language",
+      "temperature",
+      "group/hardware",
+      "battery",
+      "clock",
+      "custom/exit"
     ],
-
-    // Group Quicklinks
     "group/quicklinks": {
-        "orientation": "horizontal",
-        "modules": [
-            "custom/filemanager",
-            "custom/brave",
-         ]
+      "orientation": "horizontal",
+      "modules": [
+        "custom/filemanager",
+        "custom/brave",
+        "custom/chatgpt"
+      ]
     },
-
-    // Group Hardware
     "group/hardware": {
-        "orientation": "horizontal",
-        "modules": [
-            "disk",
-            "cpu",
-            "memory"
-        ]
+      "orientation": "horizontal",
+      "modules": [
+        "memory",
+        "cpu"
+      ]
     }
 }
