--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -8,6 +8,7 @@ set -g set-clipboard on          # use system clipboard
 setw -g mode-keys vi
 set-window-option -g mode-keys vi
 set -g status on
+set-option -g status-position top
 
 bind ^S send-prefix
 bind -n M-H previous-window
