--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -20,7 +20,7 @@ bind % split-window -h -c "#{pane_current_path}"
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
-bind-key -r f run-shell "tmux neww ~/tmux-sessionizer"
+bind-key -r f run-shell "tmux neww /usr/local/bin/tmux-sessionizer"
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
