--- a/.config/i3/config
+++ b/.config/i3/config
@@ -16,7 +16,7 @@ set $mod Mod4
 font pango:JetBrainsMono Nerd Font 11
 
 for_window [class="^.*"] border pixel 0
-gaps inner 3px
+gaps inner 2px
 smart_gaps on
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
@@ -38,7 +38,7 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
 
-exec_always --no-startup-id /usr/bin/feh --bg-scale '/home/issamdounejjar/Downloads/wallpaper.jpg'
+exec_always --no-startup-id /usr/bin/feh --bg-scale '/home/issamdounejjar/dotfiles/srcs/wallpapers/dragon.jpg'
 exec --no-startup-id picom
 exec --no-startup-id autotiling
 
@@ -196,5 +196,7 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+        status_command SCRIPT_DIR=~/.config/i3blocks/scripts i3blocks
+        tray_padding 3px
+        separator_symbol " "
 }
