--- a/.config/i3blocks/config
+++ b/.config/i3blocks/config
@@ -87,7 +87,7 @@ separator=false
 interval=5
 
 [internet]
-command=$SCRIPT_DIR/internet
+# command=$SCRIPT_DIR/internet
 interval=once
 
 # CPU usage
@@ -107,11 +107,10 @@ min_width=CPU: 100.00%
 #
 # The battery instance defaults to 0.
 [battery]
-label=BAT
 command=$SCRIPT_DIR/battery
 #label=⚡
 #instance=1
-interval=30
+interval=10
 
 # Date Time
 #
