--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -222,8 +222,8 @@ backend = "xrender";
 dithered-present = false;
 
 # Enable/disable VSync.
-# vsync = false
-vsync = true;
+vsync = false
+# vsync = true;
 
 # Try to detect WM windows (a non-override-redirect window with no
 # child that has 'WM_STATE') and mark them as active.
