--- a/.config/i3/config
+++ b/.config/i3/config
@@ -10,6 +10,7 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod4
+set $alt Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -77,6 +78,11 @@ bindsym $mod+d exec --no-startup-id dmenu_run
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
+
+## Screenshots
+bindsym $mod+$alt+s exec --no-startup-id maim "/home/$USER/Pictures/$(date)" | xclip -selection clipboard -t image/png
+bindsym $mod+Ctrl+s exec --no-startup-id maim --window $(xdotool getactivewindow) "/home/$USER/Pictures/$(date)" | xclip -selection clipboard -t image/png
+bindsym $mod+Shift+s exec --no-startup-id maim --select "/home/$USER/Pictures/$(date)" | xclip -selection clipboard -t image/png
 
 # change focus
 bindsym $mod+h focus left
