--- a/.config/i3/config
+++ b/.config/i3/config
@@ -80,9 +80,9 @@ bindsym $mod+d exec --no-startup-id dmenu_run
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
 
 ## Screenshots
-bindsym $mod+$alt+s exec --no-startup-id maim "/home/$USER/Pictures/$(date)" | xclip -selection clipboard -t image/png
-bindsym $mod+Ctrl+s exec --no-startup-id maim --window $(xdotool getactivewindow) "/home/$USER/Pictures/$(date)" | xclip -selection clipboard -t image/png
-bindsym $mod+Shift+s exec --no-startup-id maim --select "/home/$USER/Pictures/$(date)" | xclip -selection clipboard -t image/png
+bindsym $mod+$alt+s exec --no-startup-id maim "/home/$USER/Pictures/$(date +%Y-%m-%d_%H-%M-%S).png" && xclip -selection clipboard -t image/png -i "/home/$USER/Pictures/$(date +%Y-%m-%d_%H-%M-%S).png"
+bindsym $mod+Ctrl+s exec --no-startup-id maim --window $(xdotool getactivewindow) "/home/$USER/Pictures/$(date +%Y-%m-%d_%H-%M-%S).png" && xclip -selection clipboard -t image/png -i "/home/$USER/Pictures/$(date +%Y-%m-%d_%H-%M-%S).png"
+bindsym $mod+Shift+s exec --no-startup-id maim --select "/home/$USER/Pictures/$(date +%Y-%m-%d_%H-%M-%S).png" && xclip -selection clipboard -t image/png -i "/home/$USER/Pictures/$(date +%Y-%m-%d_%H-%M-%S).png"
 
 # change focus
 bindsym $mod+h focus left
