--- a/.config/i3/config
+++ b/.config/i3/config
@@ -42,6 +42,7 @@ exec --no-startup-id nm-applet
 exec_always --no-startup-id /usr/bin/feh --bg-scale '/home/issamdounejjar/dotfiles/srcs/wallpapers/dragon.jpg'
 exec --no-startup-id picom
 exec --no-startup-id autotiling
+exec --no-startup-id xrandr --output DP-0 --mode 2560x1080 --rate 200
 
 # Toggle i3bar
 bindsym Shift+$mod+b bar mode toggle
