--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -812,7 +812,7 @@ enable_audio_bell no
 #: that setting a non-zero window_margin_width overrides this and
 #: causes all borders to be drawn.
 
-# window_margin_width 0
+window_margin_width 0
 
 #: The window margin (in pts) (blank area outside the border). A
 #: single value sets all four sides. Two values set the vertical and
@@ -827,7 +827,7 @@ enable_audio_bell no
 #: set the vertical and horizontal sides. Three values set top,
 #: horizontal and bottom. Four values set top, right, bottom and left.
 
-# window_padding_width 0
+window_padding_width 0
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
@@ -842,7 +842,7 @@ enable_audio_bell no
 #: set the vertical and horizontal sides. Three values set top,
 #: horizontal and bottom. Four values set top, right, bottom and left.
 
-# placement_strategy center
+placement_strategy center
 
 #: When the window size is not an exact multiple of the cell size, the
 #: cell area of the terminal window will have some extra padding on
@@ -916,7 +916,7 @@ enable_audio_bell no
 #: first number is used so that kitty is "ready" quickly after the end
 #: of resizing, while not also continuously redrawing, to save energy.
 
-# resize_in_steps no
+resize_in_steps no
 
 #: Resize the OS window in steps as large as the cells, instead of
 #: with the usual pixel accuracy. Combined with initial_window_width
