add plugin and change default editor

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,4 +1,5 @@
 set-option -g terminal-overrides ',xterm-256color:RGB'
+setenv EDITOR "nvim"
 
 unbind C-b
 set -g prefix ^S
@@ -27,10 +28,13 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-# set -g @plugin 'fcsonline/tmux-thumbs'
+set -g @plugin 'fcsonline/tmux-thumbs'
 set -g @plugin 'wfxr/tmux-fzf-url'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin "janoamaral/tokyo-night-tmux"
+set -g @plugin "tmux-plugins/tmux-open"
+
+set -g @thumbs-copy-command 'xclip -selection clipboard -in'
 
 # set -g @continuum-boot 'on'
 set -g @continuum-restore 'on'
