enable restore on boot and save pane contents

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -36,7 +36,8 @@ set -g @plugin "tmux-plugins/tmux-open"
 
 set -g @thumbs-copy-command 'xclip -selection clipboard -in'
 
-# set -g @continuum-boot 'on'
+set -g @continuum-boot 'on'
 set -g @continuum-restore 'on'
+set -g @resurrect-capture-pane-contents 'on'
 
 run '~/.tmux/plugins/tpm/tpm'
