change --adopt to --override

--- a/srcs/setup/arch/playbook.yml
+++ b/srcs/setup/arch/playbook.yml
@@ -121,4 +121,4 @@
       ansible.builtin.command:
       args:
         chdir: "{{ dotfiles_dir }}"
-        cmd: stow --adopt .
+        cmd: stow --override=all .
