--- a/srcs/setup/ubuntu.yml
+++ b/srcs/setup/ubuntu.yml
@@ -61,13 +61,19 @@
     - name: Run Homebrew installation script
       ansible.builtin.shell:
         cmd: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+
+    - name: Eval Homebrew
+      ansible.builtin.shell:
+        cmd: eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
         
     - name: Install Additional Tools via Brew
       community.general.homebrew:
         name:
           - lazygit
           - lazydocker
-          - oven-sh/bun/bun
+          - bun
+        state: latest
+        update_homebrew: true
           
     - name: Download JetBrainsMono Nerd Font
       ansible.builtin.get_url:
