--- a/srcs/setup/ubuntu.yml
+++ b/srcs/setup/ubuntu.yml
@@ -72,6 +72,7 @@
           - lazygit
           - lazydocker
           - bun
+          - fnm
         state: latest
         update_homebrew: true
           
