add condition to set-option

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,4 +1,5 @@
-set-option -g terminal-overrides ',xterm-256color:RGB'
+if-shell -b '[ -n "$TMUX" ]' 'set-option -g terminal-overrides ",xterm-256color:RGB"'
+
 setenv EDITOR "nvim"
 
 unbind C-b
