--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,6 +1,6 @@
 if-shell -b '[ -n "$TMUX" ]' 'set-option -g terminal-overrides ",xterm-256color:RGB"'
 
-setenv EDITOR "nvim"
+set-environment -g EDITOR nvim
 
 unbind C-b
 set -g prefix ^S
