fix the cmd for fnm install

--- a/srcs/setup/config.yml
+++ b/srcs/setup/config.yml
@@ -60,7 +60,10 @@
     - name: Install Node
       ansible.builtin.shell:
       args:
-        cmd: eval "$(fnm env --use-on-cd --shell $(basename {{ lookup('env', 'SHELL') }}))" && fnm install 23 && fnm use 23
+        cmd: >
+          eval "$(fnm env --use-on-cd --shell $(basename {{ lookup('env', 'SHELL') }}))" &&
+          fnm install 23 &&
+          fnm use 23
 
     - name: Reboot the machine
       become: true
