--- a/srcs/setup/config.yml
+++ b/srcs/setup/config.yml
@@ -58,12 +58,10 @@
         cmd: stow --adopt . && git restore .
         
     - name: Install Node
-      ansible.builtin.shell:
-      args:
-        cmd: >
-          eval $(fnm env --use-on-cd --shell fish) &&
-          fnm install 23 &&
-          fnm use 23
+      ansible.builtin.shell: >
+        eval $(fnm env --use-on-cd --shell fish) &&
+        fnm install 23 &&
+        fnm use 23
 
     - name: Reboot the machine
       become: true
