--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -32,8 +32,16 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'fcsonline/tmux-thumbs'
 set -g @plugin 'wfxr/tmux-fzf-url'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin "janoamaral/tokyo-night-tmux"
 set -g @plugin "tmux-plugins/tmux-open"
+
+set -g @plugin "janoamaral/tokyo-night-tmux"
+set -g @tokyo-night-tmux_window_id_style hide
+set -g @tokyo-night-tmux_pane_id_style hide
+set -g @tokyo-night-tmux_zoom_id_style hide
+set -g @tokyo-night-tmux_show_datetime 0
+set -g @tokyo-night-tmux_show_path 0
+set -g @tokyo-night-tmux_terminal_icon 
+set -g @tokyo-night-tmux_active_terminal_icon 
 
 set -g @thumbs-copy-command 'xclip -selection clipboard -in'
 
