--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -36,13 +36,13 @@ animations {
 
 background {
     monitor =
-    path = $HOME/dotfiles/srcs/wallpapers/tanjiro-kamado.png
+    path = $HOME/dotfiles/srcs/wallpapers/wallpaper.png
     blur_passes = 0
 }
 
 input-field {
     monitor =
-    size = 10%, 25%
+    size = 200, 200
     outline_thickness = 5
     dots_size = 0.2
     hide_input = true
