--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -231,6 +231,7 @@ bind = $mainMod, D, exec, $menu
 bind = $mainMod SHIFT, D, exec, $run
 bind = $mainMod, N, exec, $notifications
 bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod SHIFT, P, exec, ~/.config/hypr/scripts/power
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod SHIFT, L, exec, hyprlock
 
