--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -26,8 +26,8 @@ listener {
 }
 
 # Suspend system after 30 minutes
-listener {
-    timeout = 1800                                # 30min
-    on-timeout = systemctl suspend                # suspend pc
-    on-resume = loginctl lock-session
-}
+# listener {
+#     timeout = 1800                                # 30min
+#     on-timeout = systemctl suspend                # suspend pc
+#     on-resume = loginctl lock-session
+# }
