--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -41,7 +41,7 @@ $notifications = swaync-client -t -sw
 # exec-once = waybar & hyprpaper & firefox
 
 exec-once = env > ~/.config/hypr/wayland-env
-exec-once = hypridle & swaync & hyprpaper
+exec-once = hypridle & swaync & hyprpaper & waybar
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -222,6 +222,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, return, exec, $terminal
 bind = $mainMod, B, exec, $browser
+bind = $mainMod SHIFT, B, exec, ~/.config/hypr/scripts/waybar
 bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, Q, exit,
 bind = $mainMod, E, exec, $fileManager
