remove waybar from autostart

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -41,7 +41,7 @@ $notifications = swaync-client -t -sw
 # exec-once = waybar & hyprpaper & firefox
 
 exec-once = env > ~/.config/hypr/wayland-env
-exec-once = hypridle & swaync & hyprpaper & waybar
+exec-once = hypridle & swaync & hyprpaper
 
 #############################
 ### ENVIRONMENT VARIABLES ###
