--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -92,17 +92,17 @@ general {
     gaps_in = 3
     gaps_out = 3
 
-    border_size = 1
+    border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgb(ffffff)
-    col.inactive_border = rgb(000000)
+    col.active_border = rgba(FC0A2EBB)
+    col.inactive_border = rgba(255,255,255,0.3)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
-    allow_tearing = false
+    allow_tearing = true
 
     layout = dwindle
 }
@@ -238,7 +238,7 @@ bind = $mainMod SHIFT, B, exec, ~/.config/hypr/scripts/waybar
 bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, Q, exit,
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, F, fullscreen,
+bind = $mainMod, F, fullscreen, 1
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, $menu
 bind = $mainMod SHIFT, D, exec, $run
@@ -246,13 +246,26 @@ bind = $mainMod, N, exec, $notifications
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod SHIFT, P, exec, ~/.config/hypr/scripts/power
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod SHIFT, L, exec, hyprlock
+bind = $mainMod SHIFT, W, exec, hyprlock
+bind = $mainMod, I, exec, hyprpicker -a
 
-# Move focus with mainMod + arrow keys
+# Move focus with mainMod + vim movement keys
 bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
+
+# Move window with mainMod + shift + vim movement keys
+bind = $mainMod SHIFT, H, swapwindow, l
+bind = $mainMod SHIFT, L, swapwindow, r
+bind = $mainMod SHIFT, K, swapwindow, u
+bind = $mainMod SHIFT, J, swapwindow, d
+
+# Resize tiled windows (requires tiling layout like dwindle/master)
+bind = $mainMod ALT, H, resizeactive, -20 0   # Shrink width
+bind = $mainMod ALT, L, resizeactive, 20 0    # Grow width
+bind = $mainMod ALT, K, resizeactive, 0 -20   # Shrink height
+bind = $mainMod ALT, J, resizeactive, 0 20    # Grow height
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -331,3 +344,5 @@ windowrule = bordersize 0, floating:0, onworkspace:w[tv1]
 windowrule = rounding 0, floating:0, onworkspace:w[tv1]
 windowrule = bordersize 0, floating:0, onworkspace:f[1]
 windowrule = rounding 0, floating:0, onworkspace:f[1]
+
+windowrule = immediate, class:^(cs2)$
