--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -188,6 +188,8 @@ master {
 misc {
     force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
+    focus_on_activate = true
+    allow_session_lock_restore = true
 }
 
 
@@ -210,6 +212,10 @@ input {
     touchpad {
         natural_scroll = false
     }
+}
+
+cursor {
+    no_warps = true
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
