--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -7,6 +7,8 @@ set -g prefix ^S
 set -g base-index 1              # start indexing windows at 1 instead of 0
 set -g renumber-windows on       # renumber all windows when any window is closed
 set -g set-clipboard on          # use system clipboard
+set -g mouse on          # use system clipboard
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 setw -g mode-keys vi
 set-window-option -g mode-keys vi
 set -g status on
