--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -105,6 +105,7 @@ general {
     allow_tearing = true
 
     layout = dwindle
+    allow_tearing = true
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
@@ -125,7 +126,7 @@ decoration {
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
-        enabled = true
+        enabled = false
         size = 3
         passes = 1
 
