make wofi drun search case insensitive

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -38,7 +38,7 @@ monitor=,highrr,auto,1
 $terminal = alacritty
 $browser = brave
 $fileManager = nautilus
-$menu = wofi --show drun
+$menu = wofi --show drun -i
 $run = wofi --show run
 $notifications = swaync-client -t -sw
 
