add cyberdream theme

--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -4,6 +4,7 @@ TERM = "xterm-256color"
 [general]
 import = [
   "~/.config/alacritty/themes/monokai_charcoal.toml"
+  # "~/.config/alacritty/themes/cyberdream.toml"
 ]
 
 [window]
