--- a/.config/i3/config
+++ b/.config/i3/config
@@ -74,7 +74,7 @@ bindsym $mod+q kill
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec --no-startup-id "rofi -show drun -i"
-bindsym $mod+Shift+p exec --no-startup-id "~/.config/hypr/scripts/power"
+bindsym $mod+Shift+p exec --no-startup-id "$HOME/.config/i3/scripts/power"
 
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
