--- a/srcs/sddm/sddm.conf
+++ b/srcs/sddm/sddm.conf
@@ -12,7 +12,7 @@ User=
 [General]
 # Which display server should be used.
 # Valid values are: x11, x11-user, wayland. Wayland support is experimental
-DisplayServer=wayland
+DisplayServer=x11
 
 # Comma-separated list of environment variables to be set
 GreeterEnvironment=
