--- a/.config/i3/config
+++ b/.config/i3/config
@@ -51,7 +51,7 @@ exec_always --no-startup-id autotiling
 bindsym Shift+$mod+b bar mode toggle
 
 # Lock Screen
-bindsym Control+$mod+l exec "i3lock -c 000000"
+bindsym Control+$mod+l exec "betterlockscreen -l blur"
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
