--- a/.config/i3/config
+++ b/.config/i3/config
@@ -43,7 +43,7 @@ exec_always --no-startup-id nm-applet
 
 exec_always --no-startup-id i3-auto-layout
 exec_always --no-startup-id autorandr --change
-exec_always --no-startup-id /usr/bin/feh --bg-scale "/home/$USER/dotfiles/srcs/wallpapers/wallpaper.png"
+exec_always --no-startup-id /usr/bin/feh --bg-fill "/home/$USER/dotfiles/srcs/wallpapers/wallpaper.png"
 exec_always --no-startup-id picom --vsync
 exec_always --no-startup-id autotiling
 # exec_always --no-startup-id xrandr --output DP-0 --mode 2560x1080 --rate 200
