--- a/.config/i3blocks/config
+++ b/.config/i3blocks/config
@@ -26,7 +26,6 @@
 #
 # The top properties below are applied to every block, but can be overridden.
 # Each block command defaults to the script name to avoid boilerplate.
-# command=$SCRIPT_DIR/$BLOCK_NAME
 separator_block_width=15
 markup=none
 
@@ -37,89 +36,52 @@ markup=none
 # See the script for details.
 [volume]
 label=  
-command=$SCRIPT_DIR/volume
+command=scripts/volume
 instance=Master
-#instance=PCM
 interval=once
 signal=10
 
-# Memory usage
-#
-# The type defaults to "mem" if the instance is not specified.
-[memory]
-label=MEM
-separator=false
-interval=30
-
-[memory]
-label=SWAP
-instance=swap
-separator=false
-interval=30
-
-# Disk usage
-#
-# The directory defaults to $HOME if the instance is not specified.
-# The script may be called with a optional argument to set the alert
-# (defaults to 10 for 10%).
-[disk]
-label=HOME
-#instance=/mnt/data
-interval=30
-
 # Network interface monitoring
-#
-# If the instance is not specified, use the interface used for default route.
-# The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
-[iface]
-#instance=wlan0
-color=#00FF00
+[network]
+command=scripts/internet
 interval=10
-separator=false
 
-[wifi]
-#instance=wlp3s0
-interval=10
-separator=false
-
-[bandwidth]
-#instance=eth0
-interval=5
-
-[internet]
-# command=$SCRIPT_DIR/internet
+[bluetooth]
+label=
+command=scripts/toggle
 interval=once
+COMMAND_ON=bluetoothctl power on
+COMMAND_OFF=bluetoothctl power off
+COMMAND_STATUS=bluetoothctl show | grep -q "Powered: yes"
 
-# CPU usage
-#
-# The script may be called with -w and -c switches to specify thresholds,
-# see the script for details.
-[cpu_usage]
-label=CPU
-interval=10
-min_width=CPU: 100.00%
-#separator=false
+# [bluetooth]
+# command=scripts/bluetooth
+# interval=15
+# label=
 
-#[load_average]
-#interval=10
+# [wifi]
+# #instance=wlp3s0
+# interval=10
+
+# Connection
+# [ssid]
+# command=scripts/ssid
+#INTERFACE=wlan0
+# interval=60
 
 # Battery indicator
-#
-# The battery instance defaults to 0.
 [battery]
-command=$SCRIPT_DIR/battery
-#label=⚡
-#instance=1
+command=scripts/battery
 interval=10
 
-# Date Time
-#
-[time]
-label=󰥔 
-command=date '+%Y-%m-%d %H:%M'
-interval=60
+[calendar]
+command=scripts/calendar
+interval=1
+LABEL= 
+HEIGHT=200
+WIDTH=250
 
 [layout]
 label=󰌌 
-command=$SCRIPT_DIR/keyboard
+command=scripts/keyboard
 interval=once
