--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -13,6 +13,7 @@ setw -g mode-keys vi
 set-window-option -g mode-keys vi
 set -g status on
 set-option -g status-position top
+set -g allow-passthrough on
 
 bind ^S send-prefix
 bind -n M-H previous-window
