--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,5 +1,7 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
+include themes/theme.conf
+
 #: Fonts {{{
 
 #: kitty has very powerful font management. You can configure
