--- a/.config/i3/config
+++ b/.config/i3/config
@@ -14,7 +14,7 @@ set $alt Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:JetBrainsMono Nerd Font 11
+font pango:JetBrains Mono 11
 
 for_window [class="^.*"] border pixel 2
 client.focused #ff0000 #ff0000 #ff0000 #ff0000
