--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -35,6 +35,7 @@ set -g @plugin 'fcsonline/tmux-thumbs'
 set -g @plugin 'wfxr/tmux-fzf-url'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin "tmux-plugins/tmux-open"
+set -g @plugin 'jimeh/tmuxifier'
 
 set -g @plugin "janoamaral/tokyo-night-tmux"
 set -g @tokyo-night-tmux_window_id_style hide
