--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -13,3 +13,7 @@ dynamic_padding = true
 [font]
 normal = { family = "JetBrainsMono Nerd Font" }
 size = 12
+
+[shell]
+program = "/bin/zsh"
+args = ["--login"]
