--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,6 +2,8 @@
 
 include themes/theme.conf
 
+shell /bin/zsh --login
+
 #: Fonts {{{
 
 #: kitty has very powerful font management. You can configure
