updating hyprland setup

--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -1,33 +1,39 @@
 # General settings and commands to execute at different states
 general {
-    lock_cmd = pidof hyprlock || hyprlock       # avoid starting multiple hyprlock instances.
-    before_sleep_cmd = loginctl lock-session    # lock before suspend.
-    after_sleep_cmd = hyprctl dispatch dpms on  # to avoid having to press a key twice to turn on the display.
+  lock_cmd = pidof hyprlock || hyprlock       # avoid starting multiple hyprlock instances.
+  before_sleep_cmd = loginctl lock-session    # lock before suspend.
+  after_sleep_cmd = hyprctl dispatch dpms on  # to avoid having to press a key twice to turn on the display.
+  inhibit_sleep = 3                           # wait until screen is locked
 }
 
 # Dim screen after 2.5 minutes of inactivity
 listener {
-    timeout = 150                                # 2.5min.
-    on-timeout = brightnessctl -s set 10         # set monitor backlight to minimum, avoid 0 on OLED monitor.
-    on-resume = brightnessctl -r                 # monitor backlight restore.
+  timeout = 150
+  on-timeout = brightnessctl -s set 5       # set monitor backlight to minimum, avoid 0 on OLED monitor.
+  on-resume = brightnessctl -r              # monitor backlight restore.
 }
 
 # Lock screen after 5 minutes of inactivity
 listener {
-    timeout = 300                                 # 5min
-    on-timeout = loginctl lock-session            # lock screen when timeout has passed
+  timeout = 300
+  on-timeout = pidof hyprlock || hyprlock   # lock screen when timeout has passed
 }
 
-# Turn off display after 5.5 minutes
+# Lock session after 6 minutes of inactivity
 listener {
-    timeout = 330                                 # 5.5min
-    on-timeout = hyprctl dispatch dpms off        # screen off when timeout has passed
-    on-resume = hyprctl dispatch dpms on          # screen on when activity is detected after timeout has fired.
+  timeout = 360
+  on-timeout = loginctl lock-session        # lock screen when timeout has passed
+}
+
+# Turn off display after 6 minutes and 10 seconds
+listener {
+  timeout = 370
+  on-timeout = hyprctl dispatch dpms off    # screen off when timeout has passed
+  on-resume = hyprctl dispatch dpms on      # screen on when activity is detected after timeout has fired.
 }
 
 # Suspend system after 30 minutes
-# listener {
-#     timeout = 1800                                # 30min
-#     on-timeout = systemctl suspend                # suspend pc
-#     on-resume = loginctl lock-session
-# }
+listener {
+  timeout = 1800                                # 30min
+  on-timeout = systemctl suspend                # suspend pc
+}
