--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -9,24 +9,14 @@
 # Create your files separately and then link them to this file like this:
 # source = ~/.config/hypr/myColors.conf
 
-env = LIBVA_DRIVER_NAME,nvidia
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-env = GBM_BACKEND,nvidia-drm
-env = NVD_BACKEND,direct
-env = XDG_CURRENT_DESKTOP,Hyprland
-env = XDG_SESSION_TYPE,wayland
-env = XDG_SESSION_DESKTOP,Hyprland
-env = QT_AUTO_SCREEN_SCALE_FACTOR,1
-env = QT_QPA_PLATFORM,wayland;xcb
-env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
-env = ELECTRON_OZONE_PLATFORM_HINT,auto
+# Defaults
+source = ~/.config/hypr/confs/defaults/envs.conf
+source = ~/.config/hypr/confs/defaults/monitor.conf
+source = ~/.config/hypr/confs/defaults/autostarts.conf
+source = ~/.config/hypr/confs/defaults/bindings.conf
 
-################
-### MONITORS ###
-################
-
-# See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,highrr,auto,1
+# Apps
+source = ~/.config/hypr/confs/apps/browser.conf
 
 ###################
 ### MY PROGRAMS ###
@@ -35,34 +25,12 @@ monitor=,highrr,auto,1
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = alacritty
+$terminal = kitty
 $browser = brave
 $fileManager = nautilus
-$menu = wofi --show drun -i
-$run = wofi --show run
+$menu = pidof wofi || wofi --show drun -i
+$run = pidof wofi || wofi --show run
 $notifications = swaync-client -t -sw
-
-#################
-### AUTOSTART ###
-#################
-# Autostart necessary processes (like notifications daemons, status bars, etc.)
-# Or execute your favorite apps at launch like this:
-
-# exec-once = $terminal
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
-
-exec-once = env > ~/.config/hypr/wayland-env
-exec-once = hypridle & swaync & hyprpaper
-
-#############################
-### ENVIRONMENT VARIABLES ###
-#############################
-
-# See https://wiki.hyprland.org/Configuring/Environment-variables/
-
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
 
 ###################
 ### PERMISSIONS ###
@@ -89,79 +57,77 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-    gaps_in = 3
-    gaps_out = 3
+  gaps_in = 3
+  gaps_out = 3
 
-    border_size = 2
+  border_size = 2
 
-    # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(FC0A2EBB)
-    col.inactive_border = rgba(255,255,255,0.3)
+  # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
+  col.active_border = rgba(FC0A2EBB)
+  col.inactive_border = rgba(255,255,255,0.3)
 
-    # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = false
+  # Set to true enable resizing windows by clicking and dragging on borders and gaps
+  resize_on_border = false
 
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
-    allow_tearing = true
+  # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
+  allow_tearing = true
 
-    layout = dwindle
-    allow_tearing = true
+  layout = dwindle
+  allow_tearing = false
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 5
-    rounding_power = 2
+  rounding = 0
 
-    # Change transparency of focused and unfocused windows
-    active_opacity = 1.0
-    inactive_opacity = 0.9
+  # Change transparency of focused and unfocused windows
+  active_opacity = 1.0
+  inactive_opacity = 0.9
 
-    shadow {
-        enabled = true
-        range = 4
-        render_power = 3
-        color = rgba(1a1a1aee)
-    }
+  dim_around = 0.8
 
-    # https://wiki.hyprland.org/Configuring/Variables/#blur
-    blur {
-        enabled = false
-        size = 3
-        passes = 1
+  shadow {
+    enabled = true
+    range = 2
+    render_power = 3
+    color = rgba(1a1a1aee)
+  }
 
-        vibrancy = 0.1696
-    }
+  # https://wiki.hyprland.org/Configuring/Variables/#blur
+  blur {
+    enabled = true
+    size = 3
+    passes = 3
+  }
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
-    enabled = no, please :)
+  enabled = yes, please :)
 
-    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+  # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+  bezier = easeOutQuint,0.23,1,0.32,1
+  bezier = easeInOutCubic,0.65,0.05,0.36,1
+  bezier = linear,0,0,1,1
+  bezier = almostLinear,0.5,0.5,0.75,1.0
+  bezier = quick,0.15,0,0.1,1
 
-    bezier = easeOutQuint,0.23,1,0.32,1
-    bezier = easeInOutCubic,0.65,0.05,0.36,1
-    bezier = linear,0,0,1,1
-    bezier = almostLinear,0.5,0.5,0.75,1.0
-    bezier = quick,0.15,0,0.1,1
-
-    animation = global, 1, 10, default
-    animation = border, 1, 5.39, easeOutQuint
-    animation = windows, 1, 4.79, easeOutQuint
-    animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
-    animation = windowsOut, 1, 1.49, linear, popin 87%
-    animation = fadeIn, 1, 1.73, almostLinear
-    animation = fadeOut, 1, 1.46, almostLinear
-    animation = fade, 1, 3.03, quick
-    animation = layers, 1, 3.81, easeOutQuint
-    animation = layersIn, 1, 4, easeOutQuint, fade
-    animation = layersOut, 1, 1.5, linear, fade
-    animation = fadeLayersIn, 1, 1.79, almostLinear
-    animation = fadeLayersOut, 1, 1.39, almostLinear
-    animation = workspaces, 1, 1.94, almostLinear, fade
-    animation = workspacesIn, 1, 1.21, almostLinear, fade
-    animation = workspacesOut, 1, 1.94, almostLinear, fade
+  animation = global, 1, 10, default
+  animation = border, 1, 5.39, easeOutQuint
+  animation = windows, 1, 4.79, easeOutQuint
+  animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
+  animation = windowsOut, 1, 1.49, linear, popin 87%
+  animation = fadeIn, 1, 1.73, almostLinear
+  animation = fadeOut, 1, 1.46, almostLinear
+  animation = fade, 1, 3.03, quick
+  animation = layers, 1, 3.81, easeOutQuint
+  animation = layersIn, 1, 4, easeOutQuint, fade
+  animation = layersOut, 1, 1.5, linear, fade
+  animation = fadeLayersIn, 1, 1.79, almostLinear
+  animation = fadeLayersOut, 1, 1.39, almostLinear
+  animation = workspaces, 1, 1.94, almostLinear, fade
+  animation = workspacesIn, 1, 1.21, almostLinear, fade
+  animation = workspacesOut, 1, 1.94, almostLinear, fade
 }
 
 # Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
@@ -173,24 +139,42 @@ animations {
 # windowrule = rounding 0, floating:0, onworkspace:w[tv1]
 # windowrule = bordersize 0, floating:0, onworkspace:f[1]
 # windowrule = rounding 0, floating:0, onworkspace:f[1]
+windowrule = float, class:waybar-kitty
+windowrule = size 60% 80%, class:waybar-kitty
+windowrule = dimaround, class:waybar-kitty
+windowrule = animation popin, class:waybar-kitty
+
+windowrule = opacity 0.0 override, class:^(xwaylandvideobridge)$
+windowrule = noanim, class:^(xwaylandvideobridge)$
+windowrule = noinitialfocus, class:^(xwaylandvideobridge)$
+windowrule = maxsize 1 1, class:^(xwaylandvideobridge)$
+windowrule = noblur, class:^(xwaylandvideobridge)$
+windowrule = nofocus, class:^(xwaylandvideobridge)$
+
+windowrule = float, class:blueberry.py
+
+xwayland {
+  force_zero_scaling = true
+}
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
-    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = true # You probably want this
+  pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
+  preserve_split = true # You probably want this
 }
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
-    new_status = master
+  new_status = master
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
-    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
-    focus_on_activate = true
-    allow_session_lock_restore = true
+  force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
+  disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
+  focus_on_activate = true
+  allow_session_lock_restore = true
+  font_family = JetBrains Mono
 }
 
 
@@ -200,35 +184,35 @@ misc {
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout = us
-    kb_variant =
-    kb_model =
-    kb_options =
-    kb_rules =
+  kb_layout = us
+  kb_variant =
+  kb_model =
+  kb_options =
+  kb_rules =
 
-    follow_mouse = 1
+  follow_mouse = 1
 
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+  sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
-    touchpad {
-        natural_scroll = false
-    }
+  touchpad {
+    natural_scroll = false
+  }
 }
 
 cursor {
-    no_warps = true
+  no_warps = true
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
+  # workspace_swipe = false
 }
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
 device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
+  name = epic-mouse-v1
+  sensitivity = -0.5
 }
 
 ###################
@@ -251,7 +235,7 @@ bind = $mainMod, D, exec, $menu
 bind = $mainMod SHIFT, D, exec, $run
 bind = $mainMod, N, exec, $notifications
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod SHIFT, P, exec, ~/.config/hypr/scripts/power
+bind = $mainMod SHIFT, P, exec, wlogout
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod SHIFT, W, exec, hyprlock
 bind = $mainMod, I, exec, hyprpicker -a
