--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,107 +1,96 @@
-# sample hyprlock.conf
-# for more configuration options, refer https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock
-#
-# rendered text in all widgets supports pango markup (e.g. <b> or <i> tags)
-# ref. https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock/#general-remarks
-#
-# shortcuts to clear password buffer: ESC, Ctrl+U, Ctrl+Backspace
-#
-# you can get started by copying this config to ~/.config/hypr/hyprlock.conf
-#
-
-$font = JetBrainsMono Nerd Font
+$font = JetBrains Mono
 
 general {
-    hide_cursor = false
-    ignore_empty_input = true
+  hide_cursor = false
+  ignore_empty_input = true
 }
 
 # uncomment to enable fingerprint authentication
 auth {
-    fingerprint {
-        enabled = true
-        ready_message = Scan fingerprint to unlock
-        present_message = Scanning...
-        retry_delay = 250 # in milliseconds
-    }
+  fingerprint {
+    enabled = true
+    ready_message = Scan fingerprint to unlock
+    present_message = Scanning...
+    retry_delay = 250 # in milliseconds
+  }
 }
 
 animations {
-    enabled = true
-    bezier = linear, 1, 1, 0, 0
-    animation = fadeIn, 1, 5, linear
-    animation = fadeOut, 1, 5, linear
-    animation = inputFieldDots, 1, 2, linear
+  enabled = true
+  bezier = linear, 1, 1, 0, 0
+  animation = fadeIn, 1, 5, linear
+  animation = fadeOut, 1, 5, linear
+  animation = inputFieldDots, 1, 2, linear
 }
 
 background {
-    monitor =
-    path = $HOME/dotfiles/srcs/wallpapers/wallpaper.png
-    blur_passes = 0
+  monitor =
+  path = $HOME/dotfiles/srcs/wallpapers/wallpaper.png
+  blur_passes = 0
 }
 
 input-field {
-    monitor =
-    size = 200, 200
-    outline_thickness = 5
-    dots_size = 0.2
-    hide_input = true
-    
-    inner_color = rgba(0, 0, 0, 0.0) # no fill
-    outer_color = rgb(ffffff)
-    check_color = rgba(00ff99ee) rgba(ff6633ee) 120deg
-    fail_color = rgb(ff0000)
+  monitor =
+  size = 50, 50
+  outline_thickness = 5
+  dots_size = 0.2
+  hide_input = true
 
-    font_color = rgb(143, 143, 143)
-    fade_on_empty = true
-    rounding = -1
+  inner_color = rgba(0, 0, 0, 0.0) # no fill
+  outer_color = rgb(ffffff)
+  check_color = rgba(00ff99ee) rgba(ff6633ee) 120deg
+  fail_color = rgb(ff0000)
 
-    font_family = $font
-    placeholder_text = 
-    fail_text = 
+  font_color = rgb(143, 143, 143)
+  fade_on_empty = true
+  rounding = -1
 
-    # uncomment to use a letter instead of a dot to indicate the typed password
-    # dots_text_format = *
-    # dots_size = 0.4
-    dots_spacing = 0.3
+  font_family = $font
+  placeholder_text = 
+  fail_text = 
 
-    position = 0, -20
-    halign = center
-    valign = center
+  # uncomment to use a letter instead of a dot to indicate the typed password
+  # dots_text_format = *
+  # dots_size = 0.4
+  dots_spacing = 0.3
+
+  position = 30, 20
+  halign = left
+  valign = bottom
 }
 
 # FAIL
 label {
-    monitor =
-    text = $FAIL
-    font_size = 10
-    font_family = $font
+  monitor =
+  text = $FAIL
+  font_size = 12
+  font_family = $font
 
-    position = 0, -200
-    halign = center
-    valign = center
+  position = 100, 35
+  halign = left
+  valign = bottom
 }
 
 # TIME
 label {
-    monitor =
-    text = $TIME # ref. https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock/#variable-substitution
-    font_size = 60
-    font_family = $font
+  monitor =
+  text = $TIME # ref. https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock/#variable-substitution
+  font_size = 60
+  font_family = $font
 
-    position = -30, 40
-    halign = right
-    valign = bottom
+  position = -30, 40
+  halign = right
+  valign = bottom
 }
 
 # DATE
 label {
-    monitor =
-    text = cmd[update:60000] date +"%A, %d %B %Y" # update every 60 seconds
-    font_size = 15
-    font_family = $font
+  monitor =
+  text = cmd[update:60000] date +"%A, %d %B %Y" # update every 60 seconds
+  font_size = 15
+  font_family = $font
 
-    position = -30, 20
-    halign = right
-    valign = bottom
+  position = -30, 20
+  halign = right
+  valign = bottom
 }
