add clipboard image

--- a/.config/hypr/confs/defaults/autostarts.conf
+++ b/.config/hypr/confs/defaults/autostarts.conf
@@ -1,2 +1,5 @@
 exec-once = env > ~/.config/hypr/wayland-env
 exec-once = hypridle & swayosd-server & swaync & hyprpaper
+
+exec-once = wl-paste --type text --watch cliphist store # Stores only text data
+exec-once = wl-paste --type image --watch cliphist store # Stores only image data
