--- a/.config/hypr/confs/defaults/bindings.conf
+++ b/.config/hypr/confs/defaults/bindings.conf
@@ -29,3 +29,6 @@ bindd = , PRINT, Screenshot with editing, exec, ~/.config/hypr/scripts/screensho
 bindd = SHIFT, PRINT, Screenshot to clipboard, exec, ~/.config/hypr/scripts/screenshot smart clipboard
 bindd = SUPER, PRINT, Color picker, exec, pkill hyprpicker || hyprpicker -a
 bindd = ALT, PRINT, Screenrecording, exec, ~/.config/hypr/scripts/screen-recorder
+
+# Clipboard history with cliphist and wofi
+bind = SUPER SHIFT, c, exec, cliphist list | wofi -dmenu | cliphist decode | wl-copy
