add pop-up bind

--- a/.config/hypr/confs/defaults/bindings.conf
+++ b/.config/hypr/confs/defaults/bindings.conf
@@ -32,3 +32,6 @@ bindd = ALT, PRINT, Screenrecording, exec, ~/.config/hypr/scripts/screen-recorde
 
 # Clipboard history with cliphist and wofi
 bind = SUPER SHIFT, c, exec, cliphist list | wofi -dmenu | cliphist decode | wl-copy
+
+# Pop window out (float & pin)
+bindd = SUPER, O, Pop window out (float & pin), exec, ~/.config/hypr/scripts/window-popup
