--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -153,6 +153,12 @@ windowrule = nofocus, class:^(xwaylandvideobridge)$
 
 windowrule = float, class:blueberry.py
 
+windowrulev2 = float, title:^(Picture-in-Picture|Picture in picture)$
+windowrulev2 = move 100%-630 100%-370, title:^(Picture-in-Picture|Picture in picture)$
+windowrulev2 = size 600 340, title:^(Picture-in-Picture|Picture in picture)$
+windowrulev2 = pin, title:^(Picture-in-Picture|Picture in picture)$
+windowrulev2 = keepaspectratio, title:^(Picture-in-Picture|Picture in picture)$
+
 xwayland {
   force_zero_scaling = true
 }
