tweak some options

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -43,14 +43,6 @@
     "on-click": "pidof wofi || wofi --show drun -i",
     "tooltip-format": "Menu\n\nSuper + D"
   },
-  "custom/update": {
-    "format": "",
-    "exec": "omarchy-update-available",
-    "on-click": "omarchy-launch-floating-terminal-with-presentation omarchy-update",
-    "tooltip-format": "Omarchy update available",
-    "signal": 7,
-    "interval": 21600
-  },
   "cpu": {
     "interval": 5,
     "format": "",
@@ -73,11 +65,10 @@
     "format-wifi": "{icon}",
     "format-ethernet": "󰈀",
     "format-disconnected": "󰤭",
-    "tooltip-format-wifi": "{essid} ({frequency} GHz)\n⇣{bandwidthDownBytes}  ⇡{bandwidthUpBytes}",
-    "tooltip-format-ethernet": "⇣{bandwidthDownBytes}  ⇡{bandwidthUpBytes}",
+    "format-disabled": "󰤭",
+    "tooltip-format-wifi": "{essid} ({frequency} GHz)",
+    "tooltip-format-ethernet": "Ethernet",
     "tooltip-format-disconnected": "Disconnected",
-    "interval": 3,
-    "spacing": 1,
     "on-click": "$TERMINAL --class waybar-kitty -e impala"
   },
   "battery": {
@@ -134,9 +125,9 @@
   },
   "pulseaudio": {
     "format": "{icon}",
-    "on-click": "$TERMINAL --class=waybar-kitty -e wiremix",
-    "on-click-right": "pamixer -t",
-    "tooltip-format": "Playing at {volume}%",
+    "on-click": "pamixer -t",
+    "on-click-right": "$TERMINAL --class=waybar-kitty -e wiremix",
+    "tooltip-format": "Volume: {volume}%",
     "scroll-step": 5,
     "format-muted": "",
     "format-icons": {
