swap wofi for rofi (like wtf)

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -28,8 +28,8 @@ source = ~/.config/hypr/confs/apps/browser.conf
 $terminal = kitty
 $browser = brave
 $fileManager = nautilus
-$menu = pidof wofi || wofi --show drun -i
-$run = pidof wofi || wofi --show run
+$menu = pidof rofi || rofi -show drun -i
+$run = pidof rofi || rofi -show run
 $notifications = swaync-client -t -sw
 
 ###################
