add a quick file manager

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -28,6 +28,7 @@ source = ~/.config/hypr/confs/apps/browser.conf
 $terminal = kitty
 $browser = brave
 $fileManager = nautilus
+$quickfileManager = pidof rofi || rofi -show filebrowser
 $menu = pidof rofi || rofi -show drun -i
 $run = pidof rofi || rofi -show run
 $notifications = swaync-client -t -sw
@@ -234,7 +235,8 @@ bind = $mainMod, B, exec, $browser
 bind = $mainMod SHIFT, B, exec, ~/.config/hypr/scripts/waybar
 bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, Q, exit,
-bind = $mainMod, E, exec, $fileManager
+bind = $mainMod, E, exec, $quickfileManager
+bind = $mainMod SHIFT, E, exec, $fileManager
 bind = $mainMod, F, fullscreen, 1
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, $menu
