--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -244,7 +244,7 @@ bind = $mainMod SHIFT, D, exec, $run
 bind = $mainMod, N, exec, $notifications
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod SHIFT, P, exec, wlogout
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod ALT, J, togglesplit, # dwindle
 bind = $mainMod SHIFT, W, exec, hyprlock
 bind = $mainMod, I, exec, hyprpicker -a
 
