update windowrules to the new version

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -140,25 +140,14 @@ animations {
 # windowrule = rounding 0, floating:0, onworkspace:w[tv1]
 # windowrule = bordersize 0, floating:0, onworkspace:f[1]
 # windowrule = rounding 0, floating:0, onworkspace:f[1]
-windowrule = float, class:waybar-kitty
-windowrule = size 60% 80%, class:waybar-kitty
-windowrule = dimaround, class:waybar-kitty
-windowrule = animation popin, class:waybar-kitty
 
-windowrule = opacity 0.0 override, class:^(xwaylandvideobridge)$
-windowrule = noanim, class:^(xwaylandvideobridge)$
-windowrule = noinitialfocus, class:^(xwaylandvideobridge)$
-windowrule = maxsize 1 1, class:^(xwaylandvideobridge)$
-windowrule = noblur, class:^(xwaylandvideobridge)$
-windowrule = nofocus, class:^(xwaylandvideobridge)$
+windowrule = float on, size (monitor_w*0.6) (monitor_h*0.8), dim_around on, animation popin, match:class waybar-kitty
 
-windowrule = float, class:blueberry.py
+windowrule = opacity 0.0 override, no_anim on, no_initial_focus on, max_size 1 1, no_blur on, no_focus on, match:class ^(xwaylandvideobridge)$
 
-windowrulev2 = float, title:^(Picture-in-Picture|Picture in picture)$
-windowrulev2 = move 100%-630 100%-370, title:^(Picture-in-Picture|Picture in picture)$
-windowrulev2 = size 600 340, title:^(Picture-in-Picture|Picture in picture)$
-windowrulev2 = pin, title:^(Picture-in-Picture|Picture in picture)$
-windowrulev2 = keepaspectratio, title:^(Picture-in-Picture|Picture in picture)$
+windowrule = float on, match:class blueberry.py
+
+windowrule = float on, move ((monitor_w*1)-630) ((monitor_h*1)-370), size 600 340, pin on, keep_aspect_ratio on, match:title ^(Picture-in-Picture|Picture in picture)$
 
 xwayland {
   force_zero_scaling = true
@@ -331,17 +320,15 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # windowrule = float,class:^(kitty)$,title:^(kitty)$
 
 # Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
+windowrule = suppress_event maximize, match:class .*
 
 # Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrule = no_focus on, match:class ^$, match:title ^$, match:xwayland 1, match:float 1, match:fullscreen 0, match:pin 0
 
 # no gaps when only
 workspace = w[tv1], gapsout:0, gapsin:0
 workspace = f[1], gapsout:0, gapsin:0
-windowrule = bordersize 0, floating:0, onworkspace:w[tv1]
-windowrule = rounding 0, floating:0, onworkspace:w[tv1]
-windowrule = bordersize 0, floating:0, onworkspace:f[1]
-windowrule = rounding 0, floating:0, onworkspace:f[1]
+windowrule = border_size 0, rounding 0, match:float 0, match:workspace w[tv1]
+windowrule = border_size 0, rounding 0, match:float 0, match:workspace f[1]
 
-windowrule = immediate, class:^(cs2)$
+windowrule = immediate on, match:class ^(cs2)$
