update to new config

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,2 +1,7 @@
-preload = $HOME/dotfiles/srcs/wallpapers/wallpaper.png
-wallpaper = , $HOME/dotfiles/srcs/wallpapers/wallpaper.png
+wallpaper {
+    monitor =  # wildcard is still empty
+    fit_mode = cover
+    path = ~/dotfiles/srcs/wallpapers/wallpaper.png
+}
+
+splash = false
